# Bullseye

./: README.md
Backend/: Dockerfile  README.md  pyproject.toml
Backend/.github/workflows/: aws.yml
Backend/bullseye_backend/: config.py  database.py  dependencies.py  jwt.py  main.py
Backend/bullseye_backend/crud/: order.py  store.py  user.py
Backend/bullseye_backend/internal/map_translation/: map_create.py  map_scrape.py  map_search.py
Backend/bullseye_backend/models/: order.py  store.py  user.py
Backend/bullseye_backend/routers/: app.py  login.py  order.py  store.py  user.py
Backend/bullseye_backend/schemas/: order.py  store.py  user.py
ChromeExtension/: README.md  package-lock.json  package.json
ChromeExtension/public/: aisleFetch.js  background.js  contentScript.js  manifest.json
ChromeExtension/src/: App.css  App.js
ChromeExtension/tests/: tests.test.js
Frontend/react-app/: package-lock.json  package.json
Frontend/react-app/public/: docs.html  index.html
Frontend/react-app/public/docs/html/: annotated.html  classes.html  (+27 more)
Frontend/react-app/src/: App.js  index.js
Frontend/react-app/src/components/: AisleListSection.css  AisleListSection.js  Footer.css  Footer.js  Global.js  GoogleOuath.css  GoogleOuath.js  Head.js  HeroSection.css  HeroSection.js  InfoSection.css  InfoSection.js  LandingSection.css  LandingSection.js  NavigationBar.css  NavigationBar.js  PathSection.css  PathSection.js  ShoppingList.css  ShoppingList.js
Frontend/react-app/src/context/: ContextWrapper.js  GlobalContext.js
Frontend/react-app/src/tests/: tests.test.js
(+38 files in other folders)
